--- a/GUI/DugongPanel/Dockerfile
+++ b/GUI/DugongPanel/Dockerfile
@@ -5,4 +5,6 @@ USER root
 ENV USER dugong
 USER dugong
 
+ADD .config/GUI/xfce/ $HOME/
+
 RUN /headless/.conda2/bin/conda create -n panel anaconda-navigator=1.5
