--- a/GUI/DugongPanel/ICEWM/Dockerfile
+++ b/GUI/DugongPanel/ICEWM/Dockerfile
@@ -1,10 +1,10 @@
-FROM dugong/dugong
+FROM dugong/dugong:icewm
 MAINTAINER Fabiano Menegidio
 
 USER root
 ENV USER dugong
 USER dugong
 
-ADD .config/GUI/xfce/ $HOME/
+ADD .config/GUI/icewm/ $HOME/
 
 RUN /headless/.conda2/bin/conda create -n panel anaconda-navigator=1.5
