--- a/GUI/UGENE/XFCE4/Dockerfile
+++ b/GUI/UGENE/XFCE4/Dockerfile
@@ -10,6 +10,7 @@ RUN echo "deb http://ppa.launchpad.net/iefremov/ppa/ubuntu natty main" >> /etc/a
     && apt-get install -y libc6 libgcc1 libgl1-mesa-glx libqt4-network \
     libqt4-opengl libqt4-script libqt4-svg libqt4-xml libqtcore4 \
     libqtgui4 libqtwebkit4 libsqlite3-0 libstdc++6 libx11-6 zlib1g ugene \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && apt-get autoremove -y && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 USER dugong
