--- a/GUI/QIIME/XFCE4/Dockerfile
+++ b/GUI/QIIME/XFCE4/Dockerfile
@@ -8,9 +8,9 @@ RUN apt-get update && apt-get -y install \
       liblapack-dev libmysqlclient18 libmysqlclient-dev libncurses5-dev libpng12-dev libreadline-dev libsqlite3-dev \
       libssl-dev libxml2 libxslt1.1 libxslt1-dev libzmq-dev mpich2 pkg-config sqlite3 subversion swig tcl-dev tk-dev \
       zlib1g-dev apt-transport-https \
-    && apt-get autoclean \
-    && apt-get autoremove \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get autoremove -y && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 
 USER dugong
 
