--- a/GUI/Taverna/XFCE4/core/Dockerfile
+++ b/GUI/Taverna/XFCE4/core/Dockerfile
@@ -5,7 +5,8 @@ USER root
 
 RUN apt-get update \
     && apt-get install graphviz -y \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && apt-get autoremove -y && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 
 WORKDIR /root/
