--- a/CMD/DugongPanel/Dockerfile
+++ b/CMD/DugongPanel/Dockerfile
@@ -5,4 +5,4 @@ USER root
 ENV USER dugong
 USER dugong
 
-RUN /headless/.conda2/bin/conda create -n panel anaconda-navigator=1.5
+RUN /headless/.conda2/bin/conda install anaconda-navigator=1.5
