--- a/GUI/SnakeMake/XFCE4/Dockerfile
+++ b/GUI/SnakeMake/XFCE4/Dockerfile
@@ -1,4 +1,4 @@
 FROM dugong/dugong
 MAINTAINER Fabiano Menegidio
 
-RUN /headless/.conda2/bin/conda install snakemake
+RUN /headless/.conda2/bin/conda create -n snakemake snakemake
