--- a/CMD/SnakeMake/Dockerfile
+++ b/CMD/SnakeMake/Dockerfile
@@ -2,4 +2,4 @@
 FROM dugong/dugong:cmd
 MAINTAINER Fabiano Menegidio
 
-RUN /headless/.conda2/bin/conda install snakemake
+RUN /headless/.conda2/bin/conda create -n snakemake snakemake
