--- a/GUI/geWorkbench/XFCE4/Dockerfile
+++ b/GUI/geWorkbench/XFCE4/Dockerfile
@@ -1,4 +1,4 @@
 FROM dugong/dugong
 MAINTAINER Fabiano Menegidio
 
-ADD geWorkbench_2.6.0 /headless/geWorkbench_2.6.0
+RUN git clone https://github.com/fabianomenegidio/geWorkbench.git $HOME/geWorkbench
